Fixed dark mode not working
- Removed tailwind imports in credentials.css
- Added !important to dark mode background color
- Removed default welcome message

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -7,18 +8,13 @@
   pointer-events: none;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: "Montserrat", sans-serif !important;
+p, h1, h2, h3, h4, h5 {
+  font-family: 'Montserrat', sans-serif!important;
 }
 
 .dark {
-  background: #222222;
-  color: white;
+  background: #222222!important;
+  color:white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -26,6 +22,8 @@ h5 {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
+
 
 .App-header {
   background: #222222;
